<resources>
    <string name="app_name">TicTacToe</string>
    <string name="game_title">Tic Tac Toe</string>
    <string name="human_turn">Waiting for User to make a move...</string>
    <string name="computer_turn">Waiting for Computer to make a move...</string>
    <string name="heading_player">Player</string>
    <string name="score_zero">0</string>
    <string name="heading_tie">Tie</string>
    <string name="heading_machine">Machine</string>
    <string name="generate_machine_move_error">Unable to Generate the next move for Computer</string>
    <string name="tie_toast">\"Current Game ended in a tie</string>
    <string name="player_lost">You lost the game</string>
    <string name="player_won">You won the game</string>
</resources>
